Fixed broken email thread view tests and added a test that an email will re-collapse upon being clicked twice.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -130,6 +130,8 @@ body {
   .email_information {
     border-top: 1px solid #e5e5e5;
     padding-top: 5px;
+    height: 45px;
+    cursor: pointer;
   }
 
   .email_subject {
